<resources>
    <string name="app_name">24占-用户端</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="facebook_app_id">178621316066662</string>
    <string name="fb_login_protocol_scheme">fb178621316066662</string>
    <string name="find_latest_version">发现新版本</string>
    <string name="need_to_update">需要更新吗？</string>
    <string name="force_update">必须更新，否则无法使用</string>
    <string name="index">主页</string>
    <string name="shop">商城</string>
    <string name="person">个人</string>
    <string name="retry_login">需要重新登录</string>
    <string name="all">全部</string>
    <string name="to_be_complete">未完成</string>
    <string name="completed">已完成</string>
    <string name="my_order">我的订单</string>
    <string name="augur">占卜师</string>
    <string name="divine">占卜</string>
    <string name="have_paid">已支付</string>
    <string name="non_payment">未支付</string>
    <string name="go_pay">立即付款</string>
    <string name="price_sum">合计：￥</string>
    <string name="order_id">订单编号：# %d</string>
    <string name="online_divine">在线占卜</string>
    <string name="order_has_complete">订单已完成</string>
    <string name="to_complete_order">视频通话结束，请前往我的订单中确认订单</string>
    <string name="pay_success_to_order_see">支付成功，在我的订单里可查看</string>
    <string name="product_info">商品信息</string>
    <string name="order_detail">订单详情</string>
    <string name="order_time">预约时间：</string>
    <string name="order_type">占卜类型：</string>
    <string name="order_price">占卜价格：</string>
    <string name="order_remark">备注信息：</string>
    <string name="order_pay_status">支付状态：</string>
    <string name="order_person_name">姓名：</string>
    <string name="order_person_sex">性别：</string>
    <string name="order_person_tel">电话：</string>
    <string name="order_person_business">类型：</string>
    <string name="master_info">大师信息</string>
    <string name="master_name">大师姓名：</string>
    <string name="cancel_order">取消订单</string>
    <string name="sure_cancel">确认取消？</string>
    <string name="cancel_success">取消成功</string>
    <string name="product_name">商品名称：</string>
    <string name="product_num">商品数量：</string>
    <string name="product_amount">商品总价：</string>
    <string name="order_amount">订单总价：</string>
    <string name="shipping_address">收货地址：</string>
    <string name="string_wechat_login">微信登录</string>
    <string name="string_phone_login">手机登录</string>
    <string name="facebook_login">脸书登录</string>
    <string name="string_wechat_no_support">未安裝微信</string>
    <string name="incorrect_phone_num">請輸入正確電話號碼</string>
    <string name="login_edit_please_input_phone">请输入手机号码</string>
    <string name="login_edit_please_input_verify">请输入验证码</string>
    <string name="login_btn_get_verify_code">获取验证码</string>
    <string-array name="area_code">
        <item>阿富汗 +93</item>
        <item>阿尔及利亚 +213</item>
        <item>安道尔 +376</item>
        <item>安圭拉 +1264</item>
        <item>安提瓜和巴布达 +1268</item>
        <item>亚美尼亚 +374</item>
        <item>澳大利亚 +61</item>
        <item>阿塞拜疆 +994</item>
        <item>孟加拉国 +880</item>
        <item>白俄罗斯 +375</item>
        <item>伯利兹 +501</item>
        <item>百慕大 +1441</item>
        <item>玻利维亚 +591</item>
        <item>博茨瓦纳 +267</item>
        <item>巴西 +55</item>
        <item>英属维尔京群岛 +1284</item>
        <item>保加利亚 +359</item>
        <item>缅甸 +95</item>
        <item>柬埔寨 +855</item>
        <item>加拿大 +1</item>
        <item>开曼群岛 +1345</item>
        <item>乍得 +235</item>
        <item>中国 +86</item>
        <item>科科斯（基林）群岛 +61</item>
        <item>科摩罗 +269</item>
        <item>刚果（布） +242</item>
        <item>哥斯达黎加 +506</item>
        <item>克罗地亚 +385</item>
        <item>塞浦路斯 +357</item>
        <item>丹麦 +45</item>
        <item>多米尼克 +1767</item>
        <item>厄瓜多尔 +593</item>
        <item>萨尔瓦多 +503</item>
        <item>厄立特里亚 +291</item>
        <item>埃塞俄比亚 +251</item>
        <item>福克兰群岛（马尔维纳斯） +500</item>
        <item>斐济 +679</item>
        <item>法国 +33</item>
        <item>法属波利尼西亚 +689</item>
        <item>加蓬 +241</item>
        <item>德国 +49</item>
        <item>直布罗陀 +350</item>
        <item>格陵兰 +299</item>
        <item>瓜德罗普 +590</item>
        <item>危地马拉 +502</item>
        <item>几内亚 +224</item>
        <item>圭亚那 +592</item>
        <item>洪都拉斯 +504</item>
        <item>匈牙利 +36</item>
        <item>印度 +91</item>
        <item>伊朗 +98</item>
        <item>爱尔兰 +353</item>
        <item>意大利 +39</item>
        <item>日本 +81</item>
        <item>约旦 +962</item>
        <item>肯尼亚 +254</item>
        <item>朝鲜 +850</item>
        <item>科威特 +965</item>
        <item>老挝 +856</item>
        <item>黎巴嫩 +961</item>
        <item>利比里亚 +231</item>
        <item>列支敦士登 +423</item>
        <item>卢森堡 +352</item>
        <item>前南马其顿 +389</item>
        <item>马拉维 +265</item>
        <item>马尔代夫 +960</item>
        <item>马耳他 +356</item>
        <item>马绍尔群岛 +692</item>
        <item>毛里塔尼亚 +222</item>
        <item>马约特 +269</item>
        <item>密克罗尼西亚 +691</item>
        <item>摩纳哥 +377</item>
        <item>蒙特塞拉特 +1664</item>
        <item>莫桑比克 +258</item>
        <item>瑙鲁 +674</item>
        <item>荷兰 +31</item>
        <item>新喀里多尼亚 +687</item>
        <item>尼加拉瓜 +505</item>
        <item>尼日利亚 +234</item>
        <item>诺福克岛 +6723</item>
        <item>挪威 +47</item>
        <item>巴基斯坦 +92</item>
        <item>巴拿马 +507</item>
        <item>巴拉圭 +595</item>
        <item>菲律宾 +63</item>
        <item>波兰 +48</item>
        <item>卡塔尔 +974</item>
        <item>罗马尼亚 +40</item>
        <item>卢旺达 +250</item>
        <item>圣基茨和尼维斯 +1869</item>
        <item>圣皮埃尔和密克隆 +508</item>
        <item>萨摩亚 +685</item>
        <item>圣多美和普林西比 +239</item>
        <item>塞内加尔 +221</item>
        <item>塞舌尔 +248</item>
        <item>新加坡 +65</item>
        <item>斯洛文尼亚 +386</item>
        <item>索马里 +252</item>
        <item>斯里兰卡 +94</item>
        <item>苏里南 +597</item>
        <item>斯威士兰 +268</item>
        <item>瑞士 +41</item>
        <item>台湾 +886</item>
        <item>坦桑尼亚 +255</item>
        <item>巴哈马 +1242</item>
        <item>多哥 +228</item>
        <item>汤加 +676</item>
        <item>突尼斯 +216</item>
        <item>土库曼斯坦 +993</item>
        <item>图瓦卢 +688</item>
        <item>乌克兰 +380</item>
        <item>英国 +44</item>
        <item>乌拉圭 +598</item>
        <item>瓦努阿图 +678</item>
        <item>越南 +84</item>
        <item>瓦利斯和富图纳 +681</item>
        <item>也门 +967</item>
        <item>赞比亚 +260</item>
        <item>阿尔巴尼亚 +355</item>
        <item>美属萨摩亚 +684</item>
        <item>安哥拉 +244</item>
        <item>南极洲 +672</item>
        <item>阿根廷 +54</item>
        <item>阿鲁巴 +297</item>
        <item>奥地利 +43</item>
        <item>巴林 +973</item>
        <item>巴巴多斯 +1246</item>
        <item>比利时 +32</item>
        <item>贝宁 +229</item>
        <item>不丹 +975</item>
        <item>波黑 +387</item>
        <item>文莱 +673</item>
        <item>布基纳法索 +226</item>
        <item>布隆迪 +257</item>
        <item>喀麦隆 +237</item>
        <item>佛得角 +238</item>
        <item>中非 +236</item>
        <item>智利 +56</item>
        <item>圣诞岛 +61</item>
        <item>哥伦比亚 +57</item>
        <item>刚果（金） +243</item>
        <item>库克群岛 +682</item>
        <item>科特迪瓦 +225</item>
        <item>古巴 +53</item>
        <item>捷克 +420</item>
        <item>吉布提 +253</item>
        <item>多米尼加 +1809</item>
        <item>埃及 +20</item>
        <item>赤道几内亚 +240</item>
        <item>爱沙尼亚 +372</item>
        <item>法罗群岛 +298</item>
        <item>芬兰 +358</item>
        <item>法属圭亚那 +594</item>
        <item>格鲁吉亚 +995</item>
        <item>加纳 +233</item>
        <item>希腊 +30</item>
        <item>格林纳达 +1473</item>
        <item>关岛 +1671</item>
        <item>根西岛 +1481</item>
        <item>几内亚比绍 +245</item>
        <item>海地 +509</item>
        <item>梵蒂冈 +379</item>
        <item>香港 +852</item>
        <item>冰岛 +354</item>
        <item>印度尼西亚 +62</item>
        <item>伊拉克 +964</item>
        <item>以色列 +972</item>
        <item>牙买加 +1876</item>
        <item>哈萨克斯坦 +73</item>
        <item>基里巴斯 +686</item>
        <item>韩国 +82</item>
        <item>吉尔吉斯斯坦 +996</item>
        <item>拉脱维亚 +371</item>
        <item>莱索托 +266</item>
        <item>利比亚 +218</item>
        <item>立陶宛 +370</item>
        <item>澳门 +853</item>
        <item>马达加斯加 +261</item>
        <item>马来西亚 +60</item>
        <item>马里 +223</item>
        <item>马提尼克 +596</item>
        <item>毛里求斯 +230</item>
        <item>墨西哥 +52</item>
        <item>摩尔多瓦 +373</item>
        <item>蒙古 +976</item>
        <item>摩洛哥 +212</item>
        <item>纳米尼亚 +264</item>
        <item>尼泊尔 +977</item>
        <item>荷属安的列斯 +599</item>
        <item>新西兰 +64</item>
        <item>尼日尔 +227</item>
        <item>纽埃 +683</item>
        <item>北马里亚纳 +1</item>
        <item>阿曼 +968</item>
        <item>帕劳 +680</item>
        <item>巴布亚新几内亚 +675</item>
        <item>秘鲁 +51</item>
        <item>葡萄牙 +351</item>
        <item>波多黎各 +1809</item>
        <item>留尼汪 +262</item>
        <item>俄罗斯 +7</item>
        <item>圣赫勒拿 +290</item>
        <item>圣卢西亚 +1758</item>
        <item>圣文森特和格林纳丁斯 +1784</item>
        <item>圣马力诺 +378</item>
        <item>沙特阿拉伯 +966</item>
        <item>塞尔维亚和黑山 +381</item>
        <item>塞拉利 +232</item>
        <item>斯洛伐克 +421</item>
        <item>所罗门群岛 +677</item>
        <item>南非 +27</item>
        <item>西班牙 +34</item>
        <item>苏丹 +249</item>
        <item>斯瓦尔巴岛和扬马延岛 +47</item>
        <item>瑞典 +46</item>
        <item>叙利亚 +963</item>
        <item>塔吉克斯坦 +992</item>
        <item>泰国 +66</item>
        <item>冈比亚 +220</item>
        <item>托克劳 +690</item>
        <item>特立尼达和多巴哥 +1868</item>
        <item>土耳其 +90</item>
        <item>特克斯和凯科斯群岛 +1649</item>
        <item>乌干达 +256</item>
        <item>阿拉伯联合酋长国 +971</item>
        <item>美国 +1</item>
        <item>乌兹别克斯坦 +998</item>
        <item>委内瑞拉 +58</item>
        <item>美属维尔京群岛 +1340</item>
        <item>津巴布韦 +263</item>
    </string-array>
    <string name="login_btn_login">登录</string>
    <string name="bind">绑定</string>
    <string name="wechat_no_support">未安裝微信</string>
    <string name="secs_later">秒后再获取</string>
    <string name="verify_code_has_send">验证码已发送</string>
    <string name="token_incorrect">IM Token 错误</string>
    <string name="im_connect_error">IM 连接失败</string>
    <string name="please_enter_account">请输入账号</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="register">用户注册</string>
    <string name="password_login">密码登录</string>
    <string name="verify_code_login">验证码登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="find_password">找回密码</string>
    <string name="please_enter_eight_password">请输入 8 位以上的数字或字母</string>
    <string name="please_enter_password_again">请重复输入密码</string>
    <string-array name="country_codes">
        <item>+853</item>
        <item>+852</item>
        <item>+86</item>
    </string-array>
    <string name="cancel_follow">取消关注</string>
    <string name="cancel_follow_success">取消关注成功</string>
    <string name="history">历史记录</string>
    <string name="collection">我的收藏</string>
    <string name="setting">我的设置</string>
    <string name="order">我的订单</string>
    <string name="book">我的预约</string>
    <string name="my_follow">我的关注</string>
    <string name="friend">我的好友</string>
    <string name="head">头像</string>
    <string name="name">昵称</string>
    <string name="birthday">生日</string>
    <string name="sex">性别</string>
    <string name="phone_bind">手机绑定</string>
    <string name="add_address">添加地址</string>
    <string name="about_us">关于我们</string>
    <string name="constellation">星座</string>
    <string name="not_set">未设置</string>
    <string name="update_success">更新成功</string>
    <string name="save">保存</string>
    <string name="please_login">请登录</string>
    <string name="shop_total">合计：</string>
    <string name="shop_no_carry_fee">不含运费</string>
    <string name="shop_pay">立即付款</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="logout_the_acount">退出当前账号</string>
    <string name="country_code">+86</string>
</resources>