<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_header"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/head"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/iv_user_photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_name"
                style="@style/SettingLinearStyle"
                android:focusableInTouchMode="true"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:textSize="14sp"
                    android:background="@null"
                    android:textColor="@color/grey_dark"
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_height="30dp"
                    tools:text="陈坚润" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/linear_birthday"
                style="@style/SettingLinearStyle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/birthday"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_birthday"
                    android:maxLength="10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1997-05-25" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/linear_constellation"
                style="@style/SettingLinearStyle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/constellation"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_constellation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="天蝎座" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/linear_sex"
                style="@style/SettingLinearStyle"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sex"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/rg_user_sex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_input_name_label"
                    android:layout_toRightOf="@+id/tv_input_name_label"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_sex_boy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/primary"
                        android:text="@string/boy"
                        android:textColor="@color/primary"
                        tools:targetApi="lollipop" />

                    <RadioButton
                        android:id="@+id/rb_sex_girl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/primary"
                        android:text="@string/girl"
                        android:textColor="@color/primary"
                        tools:targetApi="lollipop" />
                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/linear_tel"
                style="@style/SettingLinearStyle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone_bind"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="13631232963" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_address"
                style="@style/SettingLinearStyle"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_address"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/ic_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:id="@+id/linear_about"
                style="@style/SettingLinearStyle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/about_us"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/ic_right" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_logout"
                style="@style/SettingLinearStyle"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/logout_the_acount"
                    android:textColor="@color/deepRed" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</layout>