<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <RadioButton
        android:id="@+id/rb_select_all"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:button="@null"
        android:clickable="true"
        android:background="@drawable/shop_item_selector"/>

    <TextView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textColor="@color/deepBlue"
        android:text="@string/shop_total"/>

    <TextView
        android:id="@+id/tv_total_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/deepRed"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:text="￥0"/>

    <TextView
        android:id="@+id/tv_carry_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:textColor="@color/deepBlue"
        android:text="@string/shop_no_carry_fee"/>

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginRight="10dp"
        android:text="@string/shop_pay"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:background="@drawable/button_blue"/>
</LinearLayout>